ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/NFGdata__c.object-meta.xml
<CustomObject>
    <description>Imported data from NFG - from the &quot;old web page&quot;, aka DonateNow page.  NOTE the report generated on the &quot;old web page&quot; contains more information than the &quot;new web page&quot;.</description>
    <label>NFGdata</label>
    <nameField>
        <displayFormat>NFG-{000000}</displayFormat>
        <label>NFGdata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NFGdata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>