ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Acknowledgement_Type__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Type__c</fullName>
    <description>How is acknowledgement letter to be sent - by post or by email.</description>
    <inlineHelpText>Acknowledgement letter - by post or by email?</inlineHelpText>
    <label>Acknowledgement Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>