ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Amount_You_Receive__c.field-meta.xml
<CustomField>
    <fullName>Amount_You_Receive__c</fullName>
    <label>Amount You Receive</label>
    <length>12</length>
    <type>Text</type>
</CustomField>