ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Amount_You_Receive_f__c.field-meta.xml
<CustomField>
    <fullName>Amount_You_Receive_f__c</fullName>
    <description>Formula derived field to address formatting issue in the imported data.</description>
    <formula>IF ( LEN(Donation_Amount__c)&gt;8, (value ( MID( Donation_Amount__c , 2 , (LEN( Donation_Amount__c)-8) ) &amp; RIGHT(Donation_Amount__c, 6))), VALUE( RIGHT( Donation_Amount__c , ( LEN( Donation_Amount__c )- 1 ) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount You Receive f</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>