ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>