ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>NFGreports</relationshipName>
    <type>Lookup</type>
</CustomField>