ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Dedication__c.field-meta.xml
<CustomField>
    <fullName>Dedication__c</fullName>
    <label>Dedication</label>
    <type>TextArea</type>
</CustomField>