ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Donation_Amount__c</fullName>
    <label>Donation Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>