ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donation_Amount_f__c.field-meta.xml
<CustomField>
    <fullName>Donation_Amount_f__c</fullName>
    <description>Formula to convert formatting : from text to currency, stripping out  dollar sign &quot;$&quot; and comma &quot;,&quot;.</description>
    <formula>IF ( LEN(Donation_Amount__c)&gt;8, (value ( MID( Donation_Amount__c , 2 , (LEN( Donation_Amount__c)-8) ) &amp; RIGHT(Donation_Amount__c, 6))), VALUE( RIGHT( Donation_Amount__c , ( LEN( Donation_Amount__c )- 1 ) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donation Amount f</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>