ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donation_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Donation_Frequency__c</fullName>
    <label>Donation Frequency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>