ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donation_Id__c.field-meta.xml
<CustomField>
    <fullName>Donation_Id__c</fullName>
    <label>Donation Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>