ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donation_ID_f__c.field-meta.xml
<CustomField>
    <fullName>Donation_ID_f__c</fullName>
    <description>Formula derived field to address formatting issue in the imported data.</description>
    <formula>TEXT( VALUE ( TRIM ( Donation_Id__c ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donation ID f</label>
    <type>Text</type>
</CustomField>