ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donation_Status__c.field-meta.xml
<CustomField>
    <fullName>Donation_Status__c</fullName>
    <label>Donation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>