ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donor_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Donor_Address_1__c</fullName>
    <label>Donor Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>