ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donor_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Donor_Address_2__c</fullName>
    <label>Donor Address 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>