ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donor_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Donor_Email_Address__c</fullName>
    <label>Donor Email Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>