ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donor_Full_Address_f__c.field-meta.xml
<CustomField>
    <fullName>Donor_Full_Address_f__c</fullName>
    <formula>Donor_Address_1__c &amp; &quot;, &quot; &amp;  Donor_Address_2__c &amp; &quot;, &quot; &amp; Donor_City__c &amp; &quot;, &quot; &amp;  Donor_State__c &amp; &quot; &quot;  &amp;  Donor_Zip_f__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Full Address f</label>
    <type>Text</type>
</CustomField>