ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donor_Full_Name_f__c.field-meta.xml
<CustomField>
    <fullName>Donor_Full_Name_f__c</fullName>
    <formula>Donor_First_Name__c &amp; &quot; &quot; &amp;  Donor_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Full Name f</label>
    <type>Text</type>
</CustomField>