ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donor_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Last_Name__c</fullName>
    <label>Donor Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>