ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donor_State__c.field-meta.xml
<CustomField>
    <fullName>Donor_State__c</fullName>
    <label>Donor State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>