ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donor_Zip__c.field-meta.xml
<CustomField>
    <fullName>Donor_Zip__c</fullName>
    <label>Donor Zip</label>
    <length>12</length>
    <type>Text</type>
</CustomField>