ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Donor_Zip_f__c.field-meta.xml
<CustomField>
    <fullName>Donor_Zip_f__c</fullName>
    <formula>IF ( ISNUMBER( Donor_Zip__c ) , TRIM (Donor_Zip__c) ,&quot;0&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor Zip f</label>
    <type>Text</type>
</CustomField>