ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Fee_Donor_Pays__c.field-meta.xml
<CustomField>
    <fullName>Fee_Donor_Pays__c</fullName>
    <label>Fee Donor Pays</label>
    <length>8</length>
    <type>Text</type>
</CustomField>