ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Fee_Donor_Pays_f__c.field-meta.xml
<CustomField>
    <fullName>Fee_Donor_Pays_f__c</fullName>
    <description>Formula derived field to address formatting issue in the imported data.</description>
    <formula>VALUE( TRIM( RIGHT(  Fee_Donor_Pays__c  , ( LEN(  Fee_Donor_Pays__c )- FIND(&quot;$&quot;,  Fee_Donor_Pays__c ) ) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Donor Pays f</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>