ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Fee_You_Pay__c.field-meta.xml
<CustomField>
    <fullName>Fee_You_Pay__c</fullName>
    <label>Fee You Pay</label>
    <length>8</length>
    <type>Text</type>
</CustomField>