ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Fee_You_Pay_f__c.field-meta.xml
<CustomField>
    <fullName>Fee_You_Pay_f__c</fullName>
    <description>Formula derived field to address formatting issue in the imported data.</description>
    <formula>VALUE( TRIM( RIGHT(  Fee_You_Pay__c  , ( LEN(  Fee_You_Pay__c  )- FIND(&quot;$&quot;,  Fee_You_Pay__c  ) ) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee You Pay f</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>