ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Gift_Description__c.field-meta.xml
<CustomField>
    <fullName>Gift_Description__c</fullName>
    <label>Gift Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>