ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Gift_Name__c.field-meta.xml
<CustomField>
    <fullName>Gift_Name__c</fullName>
    <label>Gift Name</label>
    <type>TextArea</type>
</CustomField>