ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Match_For__c.field-meta.xml
<CustomField>
    <fullName>Match_For__c</fullName>
    <label>Match For</label>
    <length>100</length>
    <type>Text</type>
</CustomField>