ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Match_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Type__c</fullName>
    <label>Match Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>