ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>