ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/New_Contact__c.field-meta.xml
<CustomField>
    <fullName>New_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>After lookups, cannot find Contact record with same Name, Aliases, Email or Address.</description>
    <inlineHelpText>After checking names, email and address, a new Contact record needs to be created.</inlineHelpText>
    <label>New Contact</label>
    <type>Checkbox</type>
</CustomField>