ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/New_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New Opportunity record needs to be created.</description>
    <inlineHelpText>If new Contact - create new Oppty.
If existing Oppty is Closed/Posted -&gt; create new Oppty.</inlineHelpText>
    <label>New Opportunity</label>
    <type>Checkbox</type>
</CustomField>