ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Original_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Donation_Amount__c</fullName>
    <label>Original Donation Amount</label>
    <length>8</length>
    <type>Text</type>
</CustomField>