ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Original_Donation_Amount_Value__c.field-meta.xml
<CustomField>
    <fullName>Original_Donation_Amount_Value__c</fullName>
    <formula>VALUE( Original_Donation_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Donation Amount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>