ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Original_Donation_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Donation_Date__c</fullName>
    <label>Original Donation Date</label>
    <type>Date</type>
</CustomField>