ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Page_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Page_Nickname__c</fullName>
    <label>Page Nickname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>