ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Recipient_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Address_2__c</fullName>
    <label>Recipient Address 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>