ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Recipient_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Address_City__c</fullName>
    <label>Recipient Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>