ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Recipient_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Address_Country__c</fullName>
    <label>Recipient Address Country</label>
    <length>15</length>
    <type>Text</type>
</CustomField>