ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Recipient_Address_State_Province_Region__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Address_State_Province_Region__c</fullName>
    <label>Recipient Address State/Province/Region</label>
    <length>10</length>
    <type>Text</type>
</CustomField>