ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Recipient_Address_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Address_Zip_Postal_Code__c</fullName>
    <label>Recipient Address Zip/Postal Code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>