ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Source_webpage__c.field-meta.xml
<CustomField>
    <fullName>Source_webpage__c</fullName>
    <formula>IF(  Source__c =&quot;Network for Good&quot;, &quot;Old&quot;, ( if( Source__c =&quot;GiveCorps&quot;, &quot;New&quot;, (if(Source__c=&quot;Facebook&quot;, &quot;Facebook&quot;, &quot;Unknown&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source_webpage</label>
    <type>Text</type>
</CustomField>