ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <formula>VALUE( RIGHT( Donation_Amount__c , ( LEN( Donation_Amount__c )- 1 ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>