ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/testzip__c.field-meta.xml
<CustomField>
    <fullName>testzip__c</fullName>
    <formula>IF ( ISNUMBER( Donor_Zip__c ) ,   LEFT(Donor_Zip__c , (LEN (Donor_Zip__c) - 2) ) ,&quot;0&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>testzip</label>
    <type>Text</type>
</CustomField>