ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Tracking_Code__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Code__c</fullName>
    <label>Tracking Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>