ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/fields/Which_Latino_Giving_Circle_are_you_joini__c.field-meta.xml
<CustomField>
    <fullName>Which_Latino_Giving_Circle_are_you_joini__c</fullName>
    <label>Which LGC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>