ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/listViews/ALL2017_after_April.listView-meta.xml
<ListView>
    <fullName>ALL2017_after_April</fullName>
    <columns>NAME</columns>
    <columns>Donation_Date__c</columns>
    <columns>Donation_Amount__c</columns>
    <columns>Donation_Status__c</columns>
    <columns>Donor_Full_Name_f__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Donation_Date__c</field>
        <operation>greaterThan</operation>
        <value>5/1/2017</value>
    </filters>
    <label>ALL2017 after April</label>
</ListView>