ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/listViews/Failed_Transactions.listView-meta.xml
<ListView>
    <fullName>Failed_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Donation_Date__c</columns>
    <columns>Donation_Status__c</columns>
    <columns>Donation_Amount_f__c</columns>
    <columns>Donor_Full_Name_f__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>Donor_Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Donation_Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed Transactions</label>
</ListView>