ShakeCharity/ShakeSharityApp/force-app/main/default/objects/NFGdata__c/listViews/No_contact_name.listView-meta.xml
<ListView>
    <fullName>No_contact_name</fullName>
    <columns>NAME</columns>
    <columns>Donation_Date__c</columns>
    <columns>Donation_Status__c</columns>
    <columns>Donation_Amount_f__c</columns>
    <columns>Donor_Full_Name_f__c</columns>
    <columns>Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact_Name__c</field>
        <operation>equals</operation>
    </filters>
    <label>No contact name</label>
</ListView>